tests/grammar/types/type_alias/type_alias_err_3/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:4:1
  |
4 | _name: List = [1.1]
  | ^ expected [str | int], got [float(1.1)]
  |